cmake_minimum_required(VERSION 3.5)
project(turtlesim_plus_teleop)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

################ FIND DEPENDENCIES  #################
find_package(ament_cmake REQUIRED)		# cpp (optional)
find_package(rclcpp REQUIRED)			# cpp (optional)
find_package(ament_cmake_python REQUIRED)   	# python (optional)
find_package(rclpy REQUIRED)                	# python (optional)
find_package(rclcpp_action REQUIRED)        # ← ADD THIS
find_package(geometry_msgs REQUIRED)        # ← ADD THIS
find_package(turtlesim REQUIRED)            # ← ADD THIS
find_package(ament_cmake_python REQUIRED)   # for your Python parts
find_package(rclpy REQUIRED)                # for your Python parts
######################################################

# Install Python Module
ament_python_install_package(${PROJECT_NAME})

# Install Python executables
install(PROGRAMS
  scripts/dummy_script.py
  DESTINATION lib/${PROJECT_NAME}
)


# Include Cpp "include" directory
include_directories(include)

# Create Cpp executable
add_executable(cpp_node_test src/cpp_node.cpp)
ament_target_dependencies(cpp_node_test rclcpp)

add_executable(turtlesim_plus_teleop src/teleop.cpp)
ament_target_dependencies(turtlesim_plus_teleop 
                          rclcpp
                          rclcpp_action         # ← AND THIS
                          geometry_msgs         # ← AND THIS
                          turtlesim             # ← AND THIS
                          )

# Install Cpp executables
install(TARGETS
  cpp_node_test
  turtlesim_plus_teleop
  DESTINATION lib/${PROJECT_NAME}
)

################ INSTALL LAUNCH, ETC #################
install(DIRECTORY
  # add directories here
  DESTINATION share/${PROJECT_NAME})

ament_package()
